--- a/pagina-2.html
+++ b/pagina-2.html
@@ -34,7 +34,7 @@
                         </ul>
                     </li>
 
-                    <li><a href="#">SOBRE</a></li>
+                    <li><a href="pagina-3.html">SOBRE</a></li>
 
                     <li><a id="link" href="#">CONTATO</a>
                         <ul>
@@ -83,11 +83,11 @@
                 <div class="section-buy-body">
                     <div class="section-buy-img-area">
                         <div class="section-buy-img">
-                            <img src="assets/imagens-das-contas/fortnite-1.jpg" alt="Foto Fortnite">
+                            <img class="img" src="assets/imagens-das-contas/fortnite-1.jpg" alt="Foto Fortnite" onclick="zoom()">
                         </div>
                         <div class="section-buy-img-small">
-                            <img src="assets/imagens-das-contas/fortnite-2.jpg" alt="Foto Fortnite">
-                            <img src="assets/imagens-das-contas/fortnite-3.jpg" alt="Foto Fortnite">
+                            <img class="imgSmall" src="assets/imagens-das-contas/fortnite-2.jpg" alt="Foto Fortnite" onclick="zoomSmall()">
+                            <img class="imgSmall" onclick="zoomSmall()" src="assets/imagens-das-contas/fortnite-3.jpg" alt="Foto Fortnite">
                         </div>
                     </div>
                     <div class="section-buy-conteudo">
