--- a/pagina-2.html
+++ b/pagina-2.html
@@ -19,7 +19,7 @@
 
             <nav class="menu">
                 <ul>
-                    <li><a href="pagina-1.html">HOME</a></li>
+                    <li><a href="index-1.html">HOME</a></li>
 
                     <li><a href="#">VENDA SUA CONTA</a></li>
 
@@ -87,7 +87,7 @@
                         </div>
                         <div class="section-buy-img-small">
                             <img class="imgSmall" src="assets/imagens-das-contas/fortnite-2.jpg" alt="Foto Fortnite" onclick="zoomSmall()">
-                            <img class="imgSmall" onclick="zoomSmall()" src="assets/imagens-das-contas/fortnite-3.jpg" alt="Foto Fortnite">
+                            <img class="imgSmall-s" onclick="zoomSmalls()" src="assets/imagens-das-contas/fortnite-3.jpg" alt="Foto Fortnite">
                         </div>
                     </div>
                     <div class="section-buy-conteudo">
