--- a/index-1.html
+++ b/index-1.html
@@ -20,7 +20,7 @@
 
             <nav class="menu">
                 <ul>
-                    <li><a href="#">HOME</a></li>
+                    <li><a href="index-1.html">HOME</a></li>
 
                     <li><a href="pagina-2.html">VENDA SUA CONTA</a></li>
 
