--- a/index-1.html
+++ b/index-1.html
@@ -22,7 +22,7 @@
                 <ul>
                     <li><a href="index-1.html">HOME</a></li>
 
-                    <li><a href="pagina-2.html">VENDA SUA CONTA</a></li>
+                    <li><a href="assets/paginas/pagina-2.html">VENDA SUA CONTA</a></li>
 
                     <li><a href="#">COMPRE CONTAS</a>
                         <ul>
@@ -35,7 +35,7 @@
                         </ul>
                     </li>
 
-                    <li><a href="pagina-3.html">SOBRE</a></li>
+                    <li><a href="assets/paginas/pagina-3.html">SOBRE</a></li>
 
                     <li><a id="link" href="#">CONTATO</a>
                         <ul>
