--- a/index-1.html
+++ b/index-1.html
@@ -35,7 +35,7 @@
                         </ul>
                     </li>
 
-                    <li><a href="assets/paginas/pagina-3.html">SOBRE</a></li>
+                    <li><a href="pagina-3.html">SOBRE</a></li>
 
                     <li><a id="link" href="#">CONTATO</a>
                         <ul>
