--- a/index-1.html
+++ b/index-1.html
@@ -22,7 +22,7 @@
                 <ul>
                     <li><a href="index-1.html">HOME</a></li>
 
-                    <li><a href="assets/paginas/pagina-2.html">VENDA SUA CONTA</a></li>
+                    <li><a href="pagina-2.html">VENDA SUA CONTA</a></li>
 
                     <li><a href="#">COMPRE CONTAS</a>
                         <ul>
